--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-stone-900 text-white;
+}
+
+@layer utilities {
+  .navbar-item {
+    @apply h-full flex items-center justify-center cursor-pointer text-lg font-bold tracking-tighter uppercase;
+  }
+}
